# OutinTerminaattorit

./: .gitignore  .pylintrc  Dockerfile  MIT.md  README.md  Retro.md  fly.toml  pyproject.toml
.github/workflows/: ci.yaml
src/: app.py  config.py  db_helper.py  index.py  input_validation.py  schema.sql  util.py
src/entities/: references.py
src/instance/: mydatabase.db  mydatase.db
src/repositories/: article_repository.py  references_repository.py  todo_repository.py
src/static/css/: style.css
src/story_tests/: citations.robot  resource.robot  todos.robot
src/story_tests/downloads/: references.bib
src/templates/: index.html  layout.html  new_article.html  new_reference.html  reference.html  reference_choice.html  search.html
src/tests/: bibtex_test.py  validate_input_test.py  validate_todo_test.py
